--- a/index.html
+++ b/index.html
@@ -1,14 +1,109 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unit1</title>
-</head>
-<body>
-    <h1>Hello</h1>
-    <p>How are you?</p>
-    <p>Im ok!</p>
-</body>
-</html>
+ <!DOCTYPE html>
+ <html lang="ru">
+ <head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Вебстудио</title>
+ </head>
+ <body>
+    <!--header-->
+   <header>
+       <nav>
+            <a href="" lang="en">WebStudio</a>
+            <ul>
+                <li><a href="#studio">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+       </nav>
+ <ul>
+     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+     <li><a href="tel:+380961111111">+380961111111</a></li>
+ </ul>
+   </header>
+
+    <!--Hero-->
+    <main>
+       <section>
+           <div>
+                <h1>Эффективные решения для вашего бизнеса</h1>
+                <button type="button">Заказать услугу</button>
+           </div>
+       </section>
+
+    <!--specifics-->   
+       <section>
+           <div>
+               <h2>особенности</h2><!--[потім приховати]-->
+               <ul>
+                   <li>Внимание к деталям <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
+                   <li>Пунктуальность <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+                   <li>Планирование <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+                   <li>Современные технологии <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
+               </ul>
+           </div>
+        </section >
+
+    <!--studio-->
+        <section id="studio">
+            <div>
+                <h2>Чем мы занимаемся</h2>
+                    <ul>
+                        <li><img src="./images/img.jpg" alt="image" width="370" height="294"></li>
+                        <li><img src="./images/img_1.jpg" alt="image" width="370" height="294"></li>
+                        <li><img src="./images/img_2.jpg" alt="image" width="370" height="294"></li>
+                    </ul>
+            </div>
+        </section>
+
+    <!--team-->
+         <section>
+             <div>
+                <h2>Наша команда</h2>
+                    <ul>
+                        <li><img src="./images/igor.jpg" alt="photo" width="270" height="260">
+                        <h3>Игорь Демьяненко</h3>
+                        <p lang="en">Product Designer</p>
+                        </li>
+                        <li><img src="./images/olga.jpg" alt="photo" width="270" height="260">
+                        <h3>Ольга Репина</h3>
+                        <p lang="en">Frontend Developer</p>
+                        </li>
+                        <li><img src="./images/nikolay.jpg" alt="photo" width="270" height="260">
+                        <h3>Николай Тарасов</h3>
+                        <p lang="en">Marketing</p>
+                        </li>
+                        <li><img src="./images/mikhail.jpg" alt="photo" width="270" height="260">
+                        <h3>Михаил Ермаков</h3>
+                        <p lang="en">UI Designer</p>
+                        </li>
+                    </ul>
+            </div>
+        </section>
+
+    </main>
+   
+    <!--Footer-->
+   <footer>
+            <section>
+                <h2>лого</h2> <!--[потім приховати]-->
+                <a href="" lang="en">WebStudio</a>
+                <address>
+                    <ul>
+                        <li>
+                            <a href="https://goo.gl/maps/R5o3B6bvbHNFdNF5A" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+                                Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </section>
+   </footer>
+ </body>
+ </html>
