--- a/index.html
+++ b/index.html
@@ -26,40 +26,42 @@
     <!--Hero-->
     <main>
        <section>
-           <div>
                 <h1>Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
-           </div>
        </section>
 
     <!--specifics-->   
        <section>
-           <div>
                <h2>особенности</h2><!--[потім приховати]-->
                <ul>
-                   <li>Внимание к деталям <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-                   <li>Пунктуальность <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-                   <li>Планирование <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+                   <li>
+                       <h3>Внимание к деталям</h3> 
+                       <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                   <li>
+                       <h3>Пунктуальность</h3>
+                       <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                   <li>
+                       <h3>Планирование</h3>
+                       <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
                    <li>Современные технологии <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
                </ul>
-           </div>
         </section >
 
     <!--studio-->
         <section id="studio">
-            <div>
-                <h2>Чем мы занимаемся</h2>
+            <h2>Чем мы занимаемся</h2>
                     <ul>
                         <li><img src="./images/img.jpg" alt="image" width="370" height="294"></li>
                         <li><img src="./images/img_1.jpg" alt="image" width="370" height="294"></li>
                         <li><img src="./images/img_2.jpg" alt="image" width="370" height="294"></li>
                     </ul>
-            </div>
         </section>
 
     <!--team-->
          <section>
-             <div>
                 <h2>Наша команда</h2>
                     <ul>
                         <li><img src="./images/igor.jpg" alt="photo" width="270" height="260">
@@ -79,16 +81,13 @@
                         <p lang="en">UI Designer</p>
                         </li>
                     </ul>
-            </div>
         </section>
 
     </main>
    
     <!--Footer-->
    <footer>
-            <section>
-                <h2>лого</h2> <!--[потім приховати]-->
-                <a href="" lang="en">WebStudio</a>
+            <a href="" lang="en">WebStudio</a>
                 <address>
                     <ul>
                         <li>
@@ -103,7 +102,6 @@
                         </li>
                     </ul>
                 </address>
-            </section>
-   </footer>
+    </footer>
  </body>
  </html>
